2011-09-28  Nick Alcock  <nick.alcock@oracle.com>

	* dtrace.spec: Fix package name to dtrace-utils.

2011-09-26  Nick Alcock  <nick.alcock@oracle.com>

	* INCOMPATIBILITIES: Document lack of userspace tracing, lack of
	traceback in ustack(), sand note future problems with local tracing even
	when that is fixed.

2011-09-22  Nick Alcock  <nick.alcock@oracle.com>

	* libproc/Psymtab.c (Paddr_to_map): Temporarily stub out.
	(Plmid_to_map): Likewise.
	(i_Pxlookup_by_addr): Likewise.
	(Pxlookup_by_name): Likewise.
	(Pobjname): Likewise.

2011-09-22  Nick Alcock  <nick.alcock@oracle.com>

	* GNUmakefile (TAGS): New.
	(tags): Likewise.
	(PHONIES): Mark targets in the top-level makefile as phony.

	* runtest.sh (TIMEOUTSIG): New, allow sending a non-kill signal
	to dtrace on timeout.

	* GNUmakefile: Add missing CDDL header.
	* Makefunctions: Likewise.
	* Makerules: Likewise.
	* test/utils/Build: Likewise.
	* test/triggers/Build: Likewise.
	* runtest.sh: Likewise.
	* libproc/Build: Likewise.
	* libport/Build: Likewise.
	* libdtrace/Build: Likewise.
	* libctf/Build: Likewise.
	* cmd/Build: Likewise.
	* test/triggers/readwholedir.c: Fix copyright date.

	* test/mkemo.pl: Delete, no longer used.
	* test/unittest/tick-n/*: These are not xfail.

2011-09-19  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/Build (working-dlibs): Depend on distinct rules for each
	working dlib.
	* dtrace.spec (files): Add the headers.

2011-09-16  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Look for Makefunctions, not .mailmap, to find
	top-of-tree.

2011-09-16  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Support recursive option searching up to the test/
	root.  Call them options consistently, not flags.  Try to catch
	coredumps even if core_pattern or core_uses_pid are set, and even
	if the coredump ulimit is small.  Support --badddof.  Support
	shell comment-quoted test options.  Export $dt_flags to children.