@@ -1,3 +1,7 @@
+2011-09-29  Nick Alcock  <nick.alcock@oracle.com>
+
+	* cmd/dtrace.c (g_oflags): Force to the equivalent of -64.
+
 2011-09-28  Nick Alcock  <nick.alcock@oracle.com>
 
 	* dtrace.spec: Fix package name to dtrace-utils.
